--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
@@ -27,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1",
     "remixicon": "^4.6.0",
     "server": "file:..",
