--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@webcontainer/api": "^1.5.1-internal.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.1",
+    "redux-persist": "^6.0.0",
     "remixicon": "^4.6.0",
     "server": "file:..",
     "socket.io-client": "^4.8.1",
