--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codemirror": "^5.65.18",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.473.0",
     "markdown-to-jsx": "^7.7.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
